# hybrid_search_qdrant_fastapi

fast_api_hybrid_rag/: all_conversations.json  chatbot.db  db_vector.py  main.py  pyproject.toml  tfidf_vectorizer.pkl
fast_api_hybrid_rag/app/config/: settings.py
fast_api_hybrid_rag/app/model/: chatbot.py  database.py  json_database.py
fast_api_hybrid_rag/app/service/: ai_service.py  rag_service.py  vectordb.ipynb
fast_api_hybrid_rag/app/utils/: formatters.py
