[project]
name = "app"
version = "0.1.0"
description = "Gelişmiş Hybrid RAG teknolojisi ile güçlendirilmiş AI asistan"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "google-generativeai>=0.3.0",
    "qdrant-client>=1.6.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "transformers>=4.30.0",
    "fastembed>=0.7.1",
    "psutil>=7.0.0",
    "google>=3.0.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "datasets>=4.0.0",
    "tiktoken>=0.11.0",
    "langchain>=0.3.27",
    "nltk>=3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ai-assistant = "main:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

# UV-specific configuration
[tool.uv]
# PyTorch CPU-only index
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
